<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">图片拾取器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="xxxx">请点击图片框选择图片</string>
    <string name="buttonText">选择图片</string>
    <string name="string_size">大小</string>
    <string name="string_dw">单位</string>
    <string name="nil">nil</string>
    <string name="string_px">px</string>
    <string name="dstring_p">dp</string>
    <string name="string_bfb">%</string>
    <string name="string_hintsize">100*200</string>
    <string name="strng_setsize">设置大小</string>

</resources>
